fix(Trade): align predictions to end

--- a/src/components/Trade/Trade.module.scss
+++ b/src/components/Trade/Trade.module.scss
@@ -266,6 +266,8 @@
 
     -ms-overflow-style: none;
     scrollbar-width: none;
+
+    align-items: flex-end;
   }
 
   &NonScroll {
